--- a/Resources/Private/Language/locallang.xlf
+++ b/Resources/Private/Language/locallang.xlf
@@ -30,6 +30,9 @@
 			<trans-unit id="typo3Upgrade10">
 				<source>TYPO3 v10.x</source>
 			</trans-unit>
+			<trans-unit id="typo3Upgrade11">
+				<source>TYPO3 v11.x</source>
+			</trans-unit>
 			<trans-unit id="typo3UpgradeOptLabel">
 				<source>Choose target TYPO3 version to check compatibility : </source>
 			</trans-unit>
@@ -96,6 +99,9 @@
 			<trans-unit id="totalCompatible11">
 				<source>Total Compatible of TYPO3 11.x</source>
 			</trans-unit>
+			<trans-unit id="totalCompatible12">
+				<source>Total Compatible of TYPO3 12.x</source>
+			</trans-unit>
 			<trans-unit id="extensionlist">
 				<source>TYPO3 Extensions Report</source>
 			</trans-unit>
@@ -129,6 +135,9 @@
 			<trans-unit id="option.label11">
 				<source>TYPO3 11.x</source>
 			</trans-unit>
+			<trans-unit id="option.label12">
+				<source>TYPO3 12.x</source>
+			</trans-unit>
 			<trans-unit id="compatible6">
 				<source>Comp. 6.x</source>
 			</trans-unit>
@@ -147,6 +156,9 @@
             <trans-unit id="compatible11">
                 <source>Comp. 11.x</source>
             </trans-unit>
+			<trans-unit id="compatible12">
+				<source>Comp. 12.x</source>
+			</trans-unit>
 			<trans-unit id="action">
 				<source>Installed</source>
 			</trans-unit>
