--- a/Resources/Private/Language/locallang.xlf
+++ b/Resources/Private/Language/locallang.xlf
@@ -33,6 +33,12 @@
 			<trans-unit id="typo3Upgrade11">
 				<source>TYPO3 v11.x</source>
 			</trans-unit>
+			<trans-unit id="typo3Upgrade12">
+				<source>TYPO3 v12.x</source>
+			</trans-unit>
+			<trans-unit id="typo3Upgrade13">
+				<source>TYPO3 v13.x</source>
+			</trans-unit>
 			<trans-unit id="typo3UpgradeOptLabel">
 				<source>Choose target TYPO3 version to check compatibility : </source>
 			</trans-unit>
@@ -102,6 +108,9 @@
 			<trans-unit id="totalCompatible12">
 				<source>Total Compatible of TYPO3 12.x</source>
 			</trans-unit>
+			<trans-unit id="totalCompatible13">
+				<source>Total Compatible of TYPO3 13.x</source>
+			</trans-unit>
 			<trans-unit id="extensionlist">
 				<source>TYPO3 Extensions Report</source>
 			</trans-unit>
@@ -138,6 +147,9 @@
 			<trans-unit id="option.label12">
 				<source>TYPO3 12.x</source>
 			</trans-unit>
+			<trans-unit id="option.label13">
+				<source>TYPO3 13.x</source>
+			</trans-unit>
 			<trans-unit id="compatible6">
 				<source>Comp. 6.x</source>
 			</trans-unit>
@@ -158,6 +170,9 @@
             </trans-unit>
 			<trans-unit id="compatible12">
 				<source>Comp. 12.x</source>
+			</trans-unit>
+			<trans-unit id="compatible13">
+				<source>Comp. 13.x</source>
 			</trans-unit>
 			<trans-unit id="action">
 				<source>Installed</source>
